# emergency-detection

./: .env  .gitignore  README.md  Requirements.txt  config.yaml  data.yaml  info  requirements.txt  run.py  setup.cfg
config/: config.yaml
results/: 39_bm_videos_mediapipe_results.xlsx  39_bm_videos_yolo_pose_nn_resnet.xlsx
results/no_time_between_fall_motion_3_sec_ms_30_ptpc_07/: mp_rf_p_74_r_67_far_26.xlsx  yp_nn_p_70_r_67_far_30.xlsx  yp_rf_p_100_r_67_far_0.xlsx  yp_rf_p_88_r_67_far_13.xlsx
runs/detect/train/: args.yaml  results.csv
runs/detect/train2/: args.yaml  results.csv
runs/detect/train3/: args.yaml
runs/detect/train4/: args.yaml
runs/detect/train5/: args.yaml
runs/detect/train6/: args.yaml  results.csv
src/: .main.py.swp  __init__.py  app.py  extract.py  extract_keypoints.py  fall_detection_app.py  fall_detection_model_xgb.pkl  label_encoder.pkl  main.py  path.py  results.xlsx  run.py  test.py  train.py  train_model.py  util.py  ~$results.xlsx
src/application/: app.py  fall_detector_app.py  improved_app.py  run.py
src/application/application_evaluation/: evaluation.py  evaluation_results.csv  (+2 more)
src/data/: data.yaml
src/fall_detector/: fall_detector_evaluation.py  train_fall_detector.py
src/image_classifier/: extract.py  train.py
src/models/: fall_detection_model_xgb.pkl  improved_fall_detection_model_xgb.pkl
src/pipeline/: app.py  inference.py  inference_single_person.py  main.py  sort.py  test.py
src/utilities/: split.py
src/utils/: all_yolo_classes.py  all_yolo_ft_classes.py  crop_sq_bbox.py  minio_utils.py
src/yolo/: main.py
(+65 files in other folders)
