# setup.cfg
[metadata]
name = bot-brigade
version = 0.1
description = AI applications project to detect human falling movement

[options]
packages = find:
install_requires =
    numpy==2.1.2
    opencv-python==4.10.0.84
    packaging==24.1
    pandas==2.2.3
    pillow==10.4.0
    psutil==6.0.0
    py-cpuinfo==9.0.0
    pycparser==2.22
    pycryptodome==3.21.0
    pyparsing==3.1.4
    python-dateutil==2.9.0.post0
    pytz==2024.2
    PyYAML==6.0.2
    requests==2.32.3
    scipy==1.14.1
    seaborn==0.13.2
    six==1.16.0
    sympy==1.13.3
    torch==2.4.1
    torchvision==0.19.1
    tqdm==4.66.5
    typing_extensions==4.12.2
    tzdata==2024.2
    ultralytics==8.3.7
    ultralytics-thop==2.0.9
    urllib3==2.2.3
    python-dotenv~=1.0.1

[options.entry_points]
console_scripts =
    bb = src.run:main
